Completed Inventory tests
Farm Grid tests are mostly complete